seaqt/QtWidgets/gen_qgraphicssceneevent.h

class QEvent;
class QGraphicsSceneEvent;
class QWidget;
typedef struct QEvent QEvent;
typedef struct QGraphicsSceneDragDropEvent QGraphicsSceneDragDropEvent;
typedef struct QGraphicsSceneEvent QGraphicsSceneEvent;
typedef struct QGraphicsSceneHelpEvent QGraphicsSceneHelpEvent;
typedef struct QGraphicsSceneHoverEvent QGraphicsSceneHoverEvent;
typedef struct QGraphicsSceneMoveEvent QGraphicsSceneMoveEvent;
typedef struct QGraphicsSceneResizeEvent QGraphicsSceneResizeEvent;
typedef struct QMimeData QMimeData;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QSizeF QSizeF;
typedef struct QWidget QWidget;
typedef struct VirtualQGraphicsSceneHoverEvent VirtualQGraphicsSceneHoverEvent;
typedef struct QGraphicsSceneHoverEvent_VTable{
	void (*destructor)(VirtualQGraphicsSceneHoverEvent* self);
	void (*setAccepted)(VirtualQGraphicsSceneHoverEvent* self, bool accepted);
	QEvent* (*clone)(const VirtualQGraphicsSceneHoverEvent* self);
}QGraphicsSceneHoverEvent_VTable;
VirtualQGraphicsSceneHoverEvent* QGraphicsSceneHoverEvent_new(const QGraphicsSceneHoverEvent_VTable* vtbl, size_t vdata);
VirtualQGraphicsSceneHoverEvent* QGraphicsSceneHoverEvent_new2(const QGraphicsSceneHoverEvent_VTable* vtbl, size_t vdata, int type);
void QGraphicsSceneHoverEvent_setPos(QGraphicsSceneHoverEvent* self, QPointF* pos);
QPointF* QGraphicsSceneHoverEvent_scenePos(const QGraphicsSceneHoverEvent* self);
void QGraphicsSceneHoverEvent_setScenePos(QGraphicsSceneHoverEvent* self, QPointF* pos);
QPoint* QGraphicsSceneHoverEvent_screenPos(const QGraphicsSceneHoverEvent* self);
void QGraphicsSceneHoverEvent_setScreenPos(QGraphicsSceneHoverEvent* self, QPoint* pos);
QPointF* QGraphicsSceneHoverEvent_lastPos(const QGraphicsSceneHoverEvent* self);
void QGraphicsSceneHoverEvent_setLastPos(QGraphicsSceneHoverEvent* self, QPointF* pos);
QPointF* QGraphicsSceneHoverEvent_lastScenePos(const QGraphicsSceneHoverEvent* self);
void QGraphicsSceneHoverEvent_setLastScenePos(QGraphicsSceneHoverEvent* self, QPointF* pos);
QPoint* QGraphicsSceneHoverEvent_lastScreenPos(const QGraphicsSceneHoverEvent* self);
void QGraphicsSceneHoverEvent_setLastScreenPos(QGraphicsSceneHoverEvent* self, QPoint* pos);
int QGraphicsSceneHoverEvent_modifiers(const QGraphicsSceneHoverEvent* self);
void QGraphicsSceneHoverEvent_setModifiers(QGraphicsSceneHoverEvent* self, int modifiers);
void QGraphicsSceneHoverEvent_virtualbase_setAccepted(VirtualQGraphicsSceneHoverEvent* self, bool accepted);
QEvent* QGraphicsSceneHoverEvent_virtualbase_clone(const VirtualQGraphicsSceneHoverEvent* self);
void QGraphicsSceneHoverEvent_delete(QGraphicsSceneHoverEvent* self);
typedef struct VirtualQGraphicsSceneHelpEvent VirtualQGraphicsSceneHelpEvent;
typedef struct QGraphicsSceneHelpEvent_VTable{
	void (*destructor)(VirtualQGraphicsSceneHelpEvent* self);
	void (*setAccepted)(VirtualQGraphicsSceneHelpEvent* self, bool accepted);
	QEvent* (*clone)(const VirtualQGraphicsSceneHelpEvent* self);
}QGraphicsSceneHelpEvent_VTable;
VirtualQGraphicsSceneHelpEvent* QGraphicsSceneHelpEvent_new(const QGraphicsSceneHelpEvent_VTable* vtbl, size_t vdata);
VirtualQGraphicsSceneHelpEvent* QGraphicsSceneHelpEvent_new2(const QGraphicsSceneHelpEvent_VTable* vtbl, size_t vdata, int type);
QPointF* QGraphicsSceneHelpEvent_scenePos(const QGraphicsSceneHelpEvent* self);
void QGraphicsSceneHelpEvent_setScenePos(QGraphicsSceneHelpEvent* self, QPointF* pos);
QPoint* QGraphicsSceneHelpEvent_screenPos(const QGraphicsSceneHelpEvent* self);
void QGraphicsSceneHelpEvent_setScreenPos(QGraphicsSceneHelpEvent* self, QPoint* pos);
void QGraphicsSceneHelpEvent_virtualbase_setAccepted(VirtualQGraphicsSceneHelpEvent* self, bool accepted);
QEvent* QGraphicsSceneHelpEvent_virtualbase_clone(const VirtualQGraphicsSceneHelpEvent* self);
void QGraphicsSceneHelpEvent_delete(QGraphicsSceneHelpEvent* self);
typedef struct VirtualQGraphicsSceneDragDropEvent VirtualQGraphicsSceneDragDropEvent;
typedef struct QGraphicsSceneDragDropEvent_VTable{
	void (*destructor)(VirtualQGraphicsSceneDragDropEvent* self);
	void (*setAccepted)(VirtualQGraphicsSceneDragDropEvent* self, bool accepted);
	QEvent* (*clone)(const VirtualQGraphicsSceneDragDropEvent* self);
}QGraphicsSceneDragDropEvent_VTable;
VirtualQGraphicsSceneDragDropEvent* QGraphicsSceneDragDropEvent_new(const QGraphicsSceneDragDropEvent_VTable* vtbl, size_t vdata);
VirtualQGraphicsSceneDragDropEvent* QGraphicsSceneDragDropEvent_new2(const QGraphicsSceneDragDropEvent_VTable* vtbl, size_t vdata, int type);
QPointF* QGraphicsSceneDragDropEvent_pos(const QGraphicsSceneDragDropEvent* self);
void QGraphicsSceneDragDropEvent_setPos(QGraphicsSceneDragDropEvent* self, QPointF* pos);
QPointF* QGraphicsSceneDragDropEvent_scenePos(const QGraphicsSceneDragDropEvent* self);
void QGraphicsSceneDragDropEvent_setScenePos(QGraphicsSceneDragDropEvent* self, QPointF* pos);
QPoint* QGraphicsSceneDragDropEvent_screenPos(const QGraphicsSceneDragDropEvent* self);
void QGraphicsSceneDragDropEvent_setScreenPos(QGraphicsSceneDragDropEvent* self, QPoint* pos);
int QGraphicsSceneDragDropEvent_buttons(const QGraphicsSceneDragDropEvent* self);
void QGraphicsSceneDragDropEvent_setButtons(QGraphicsSceneDragDropEvent* self, int buttons);
int QGraphicsSceneDragDropEvent_modifiers(const QGraphicsSceneDragDropEvent* self);
void QGraphicsSceneDragDropEvent_setModifiers(QGraphicsSceneDragDropEvent* self, int modifiers);
int QGraphicsSceneDragDropEvent_possibleActions(const QGraphicsSceneDragDropEvent* self);
void QGraphicsSceneDragDropEvent_setPossibleActions(QGraphicsSceneDragDropEvent* self, int actions);
int QGraphicsSceneDragDropEvent_proposedAction(const QGraphicsSceneDragDropEvent* self);
void QGraphicsSceneDragDropEvent_setProposedAction(QGraphicsSceneDragDropEvent* self, int action);
void QGraphicsSceneDragDropEvent_acceptProposedAction(QGraphicsSceneDragDropEvent* self);
int QGraphicsSceneDragDropEvent_dropAction(const QGraphicsSceneDragDropEvent* self);
void QGraphicsSceneDragDropEvent_setDropAction(QGraphicsSceneDragDropEvent* self, int action);
QWidget* QGraphicsSceneDragDropEvent_source(const QGraphicsSceneDragDropEvent* self);
void QGraphicsSceneDragDropEvent_setSource(QGraphicsSceneDragDropEvent* self, QWidget* source);
QMimeData* QGraphicsSceneDragDropEvent_mimeData(const QGraphicsSceneDragDropEvent* self);
void QGraphicsSceneDragDropEvent_setMimeData(QGraphicsSceneDragDropEvent* self, QMimeData* data);
void QGraphicsSceneDragDropEvent_virtualbase_setAccepted(VirtualQGraphicsSceneDragDropEvent* self, bool accepted);
QEvent* QGraphicsSceneDragDropEvent_virtualbase_clone(const VirtualQGraphicsSceneDragDropEvent* self);
void QGraphicsSceneDragDropEvent_delete(QGraphicsSceneDragDropEvent* self);
typedef struct VirtualQGraphicsSceneResizeEvent VirtualQGraphicsSceneResizeEvent;
typedef struct QGraphicsSceneResizeEvent_VTable{
	void (*destructor)(VirtualQGraphicsSceneResizeEvent* self);
	void (*setAccepted)(VirtualQGraphicsSceneResizeEvent* self, bool accepted);
	QEvent* (*clone)(const VirtualQGraphicsSceneResizeEvent* self);
}QGraphicsSceneResizeEvent_VTable;
VirtualQGraphicsSceneResizeEvent* QGraphicsSceneResizeEvent_new(const QGraphicsSceneResizeEvent_VTable* vtbl, size_t vdata);
QSizeF* QGraphicsSceneResizeEvent_oldSize(const QGraphicsSceneResizeEvent* self);
void QGraphicsSceneResizeEvent_setOldSize(QGraphicsSceneResizeEvent* self, QSizeF* size);
QSizeF* QGraphicsSceneResizeEvent_newSize(const QGraphicsSceneResizeEvent* self);
void QGraphicsSceneResizeEvent_setNewSize(QGraphicsSceneResizeEvent* self, QSizeF* size);
void QGraphicsSceneResizeEvent_virtualbase_setAccepted(VirtualQGraphicsSceneResizeEvent* self, bool accepted);
QEvent* QGraphicsSceneResizeEvent_virtualbase_clone(const VirtualQGraphicsSceneResizeEvent* self);
void QGraphicsSceneResizeEvent_delete(QGraphicsSceneResizeEvent* self);
typedef struct VirtualQGraphicsSceneMoveEvent VirtualQGraphicsSceneMoveEvent;
typedef struct QGraphicsSceneMoveEvent_VTable{
	void (*destructor)(VirtualQGraphicsSceneMoveEvent* self);
	void (*setAccepted)(VirtualQGraphicsSceneMoveEvent* self, bool accepted);
	QEvent* (*clone)(const VirtualQGraphicsSceneMoveEvent* self);
}QGraphicsSceneMoveEvent_VTable;
VirtualQGraphicsSceneMoveEvent* QGraphicsSceneMoveEvent_new(const QGraphicsSceneMoveEvent_VTable* vtbl, size_t vdata);
QPointF* QGraphicsSceneMoveEvent_oldPos(const QGraphicsSceneMoveEvent* self);
void QGraphicsSceneMoveEvent_setOldPos(QGraphicsSceneMoveEvent* self, QPointF* pos);
QPointF* QGraphicsSceneMoveEvent_newPos(const QGraphicsSceneMoveEvent* self);
void QGraphicsSceneMoveEvent_setNewPos(QGraphicsSceneMoveEvent* self, QPointF* pos);
void QGraphicsSceneMoveEvent_virtualbase_setAccepted(VirtualQGraphicsSceneMoveEvent* self, bool accepted);
QEvent* QGraphicsSceneMoveEvent_virtualbase_clone(const VirtualQGraphicsSceneMoveEvent* self);
void QGraphicsSceneMoveEvent_delete(QGraphicsSceneMoveEvent* self);